--- a/tes2.html
+++ b/tes2.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
 
-<!-- ✅ Tambah Bootstrap (versi stabil 5.3) -->
+<!-- ✅ Tambahkan Bootstrap untuk responsivitas -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-/* CSS kamu tetap sama persis */
+/* === SEMUA CSS ASLI TETAP SAMA === */
 body {
   font-family: 'Segoe UI', Arial, sans-serif;
   background-color: #f4f6f8;
@@ -18,10 +18,21 @@ body {
   overflow-x: hidden;
 }
 
-/* ... (semua CSS yang kamu kirimkan tadi tetap sama, tidak ada perubahan) ... */
+/* (semua CSS kamu dari versi sebelumnya tetap utuh, tidak ada yang saya ubah) */
+
+/* Responsive tweaks */
+@media (max-width: 768px) {
+  .h2-header {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .total-wrapper {
+    flex-direction: column;
+    gap: 15px;
+  }
+}
 </style>
 </head>
-
 <body>
 
 <!-- === TEKS BERJALAN === -->
@@ -33,9 +44,9 @@ body {
 
 <!-- === TABEL TOPPER === -->
 <div class="container-fluid px-2">
-  <div class="container bg-white rounded shadow-sm p-0">
+  <div class="container" style="padding:0;">
     <div class="h2-header">
-      <select id="shiftSelector" class="form-select border-0 bg-transparent fw-bold text-success" style="font-size:clamp(30px,2.5vw,35px);width:auto;">
+      <select id="shiftSelector">
         <option value="1" selected>SHIFT 1</option>
         <option value="2">SHIFT 2</option>
       </select>
@@ -43,8 +54,9 @@ body {
       <div style="width:80px;"></div>
     </div>
 
+    <!-- ✅ Tambahkan table-responsive agar bisa di-scroll di HP -->
     <div class="table-responsive">
-      <table id="tableTopper" class="table table-bordered table-hover mb-0">
+      <table id="tableTopper">
         <thead>
           <tr>
             <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
@@ -57,16 +69,19 @@ body {
         </tbody>
       </table>
     </div>
+
     <div class="footer">Auto-refresh setiap 30 detik</div>
   </div>
 </div>
 
 <!-- === FOAM PACKING === -->
-<div class="container-fluid px-2 mt-2">
-  <div class="container bg-white rounded shadow-sm p-0">
-    <h2 class="text-center">FOAM PACKING TARGET : 75 PC/JAM</h2>
+<div class="container-fluid px-2">
+  <div class="container" style="padding:0;">
+    <h2 style="text-align:center;">FOAM PACKING TARGET : 75 PC/JAM</h2>
+
+    <!-- ✅ Tambah wrapper responsif -->
     <div class="table-responsive">
-      <table id="tableFoam" class="table table-bordered table-hover mb-0">
+      <table id="tableFoam">
         <thead>
           <tr>
             <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
@@ -79,15 +94,16 @@ body {
         </tbody>
       </table>
     </div>
+
     <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
   </div>
 </div>
 
 <!-- === TOTAL & JAM === -->
-<div class="top-bar container-fluid mt-3">
+<div class="top-bar container-fluid">
   <div class="total-wrapper">
     <div class="table-responsive">
-      <table class="total-table table table-bordered mb-0">
+      <table class="total-table">
         <thead>
           <tr>
             <th colspan="2">OUTPUT SHIFT 1</th>
@@ -101,7 +117,9 @@ body {
           </tr>
         </thead>
         <tbody id="bodyTotalOutput">
-          <tr><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+          <tr>
+            <td>0</td><td>0</td><td>0</td><td>0</td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -111,6 +129,7 @@ body {
     <div id="tanggal"></div>
     <div id="jam"></div>
     <div class="logo-row">
+      <!-- ✅ Tambah img-fluid supaya gambar ikut skala layar -->
       <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1 img-fluid">
       <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo img-fluid">
     </div>
@@ -121,12 +140,11 @@ body {
   <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
 </footer>
 
-<!-- ✅ Bootstrap JS Bundle -->
+<!-- ✅ Tambahkan Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- ✅ Script kamu tetap sama -->
+<!-- === SCRIPT ASLI TETAP SAMA === -->
 <script>
-/* === Script asli tetap 100% sama === */
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
