--- a/tes.html
+++ b/tes.html
@@ -380,10 +380,10 @@ async function loadSheetData() {
     if (totalRow) {
       document.getElementById("bodyTotalOutput").innerHTML = `
         <tr>
-          <td style="font-size:45px;">${totalRow[0] || 0}</td>
-          <td style="font-size:45px;">${totalRow[1] || 0}</td>
-          <td style="font-size:45px;">${totalRow[2] || 0}</td>
-          <td style="font-size:45px;">${totalRow[3] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[0] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[1] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[2] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[3] || 0}</td>
         </tr>`;
     }
 
