--- a/shift2.html
+++ b/shift2.html
@@ -6,314 +6,312 @@
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
   body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
-  }
-  
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background-color: #f4f6f8;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* hindari scroll horizontal */
+}
+
 .marquee {
-    background: #083D36;
-    color: white;
-    padding: 10px 0;
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-  }
+  background: #083D36;
+  color: white;
+  padding: 12px 0;
+  font-size: clamp(16px, 4vw, 50px); /* responsive font */
+  font-weight: bold;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+}
 
-  h2 {
-    text-align: center;
-    color: #333;
-    margin: 10px 0 10px;
-    font-size: 22px;
-  }
+h2 {
+  color: #333;
+  margin: 3px 0;
+  font-size: clamp(35px, 3vw, 40px);
+}
 
-  .container {
-    width: 95%;
-    margin: 15px auto;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    overflow-x: auto;
-    padding: 0;
-  }
+.h2-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3px 3%;
+  flex-wrap: wrap;
+}
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-  }
+.h2-header select {
+  font-size: clamp(30px, 2.5vw, 35px);
+  font-weight: bold;
+  border: none;
+  background: none;
+  color: #083D36;
+  cursor: pointer;
+  outline: none;
+  min-width: 100px;
+}
 
-  th, td {
-    padding: 10px 6px;
-    text-align: center;
-    font-size: 25px;
-  }
+.container {
+  width: 95vw;
+  max-width: 100%;
+  margin: 30px auto;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  overflow-x: auto; /* hanya jika perlu */
+  padding: 0;
+}
 
-  th {
-    background: #006400;
-    color: white;
-  }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  word-wrap: break-word; /* pecah kata agar tidak overflow */
+  table-layout: fixed; /* penting untuk wrapping kolom */
+}
 
-  tr:nth-child(even) { background-color: #f9f9f9; }
-  tr:hover { background-color: #e3f2fd; }
+th, td {
+  padding: 10px 6px;
+  text-align: center;
+  font-size: clamp(14px, 2vw, 32px);
+  overflow-wrap: break-word;
+}
 
-  .footer {
-    text-align: right;
-    font-size: 12px;
-    padding: 8px;
-    background: #f1f1f1;
-    color: #666;
-    border-top: 1px solid #ddd;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
+th {
+  background: #083D36;
+  color: white;
+}
 
-  /* === BAGIAN TOTAL + JAM === */
-  .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 20px 3%;
-    flex-wrap: wrap;
-  }
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
 
-  .total-wrapper {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    align-items: center;
-  }
+tr:hover {
+  background-color: #e3f2fd;
+}
 
-  .total-box {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    overflow: hidden;
-    width: 180px;
-  }
+.footer {
+  text-align: right;
+  font-size: clamp(12px, 1.5vw, 18px);
+  padding: 8px;
+  background: #f1f1f1;
+  color: #666;
+  border-top: 1px solid #ddd;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 
-  .total-box table {
-    width: 100%;
-    border-collapse: collapse;
-  }
+/* === TOTAL + JAM === */
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 10px 3%;
+  flex-wrap: wrap;
+}
 
-  .total-box th {
-    background: #006400;
-    color: white;
-    font-size: 18px;
-    padding: 10px;
-  }
+.total-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
-  .total-box td {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    padding: 10px;
-    color: #333;
-  }
+.total-table {
+  width: 100%;
+  max-width: 650px;
+  border-collapse: collapse; /* biar border-nya menyatu */
+  text-align: center;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  border: 2px solid white; /* ✅ border luar warna putih */
+}
 
-  /* === JAM DAN LOGO === */
-  .total-wrapper1 {
-    display: flex;
+.total-table th {
+  background: #083D36;
+  color: white;
+  font-size: clamp(18px, 3vw, 26px);
+  padding: 10px;
+  border: 2px solid white; /* ✅ border putih antar header */
+}
+
+.total-table td {
+  font-size: clamp(24px, 4vw, 36px);
+  font-weight: bold;
+  padding: 12px;
+  color: #333;
+  border: 2px solid white; /* ✅ border putih antar sel */
+  word-wrap: break-word;
+}
+
+
+/* === JAM & LOGO === */
+.total-wrapper1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 3%;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+#tanggal {
+  font-size: clamp(20px, 3vw, 30px);
+  font-weight: 600;
+  color: #333;
+}
+
+#jam {
+  font-size: clamp(40px, 6vw, 65px);
+  font-weight: bold;
+  color: #006400;
+  margin-top: 5px;
+}
+
+.logo-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.zinus-logo, .zinus-logo1 {
+  width: clamp(60px, 5vw, 90px);
+  height: clamp(60px, 5vw, 90px);
+  border-radius: 10px;
+  background: white;
+  object-fit: contain;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
+}
+
+/* === FOOTER === */
+.footer-zinus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #083D36;
+  color: white;
+  padding: 20px 10px;
+  border-top: 4px solid #004d00;
+  margin-top: 5px;
+}
+
+.footer-zinus p {
+  margin: 3px 0 5px;
+  font-size: clamp(20px, 2vw, 35px);
+}
+
+@keyframes fadeZoomIn {
+  0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+  100% { opacity: 1; transform: scale(1) rotate(0deg); }
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+/* Responsive tweaks */
+@media (max-width: 768px) {
+  .h2-header {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-right: 3%;
-    text-align: center;
+    gap: 10px;
   }
-
-  .datetime {
-    margin-bottom: 10px;
-  }
-
-  #tanggal {
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
-  }
-
-  #jam {
-    font-size: 40px;
-    font-weight: bold;
-    color: #006400;
-    margin-top: 5px;
-    text-align: center;
-  }
-
-  .logo-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .total-wrapper {
+    flex-direction: column;
     gap: 15px;
   }
+}
 
-  .zinus-logo, .zinus-logo1 {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    background: white;
-    object-fit: contain;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
-  }
-
-  @keyframes fadeZoomIn {
-    0% {
-      opacity: 0;
-      transform: scale(0.8) rotate(-5deg);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1) rotate(0deg);
-    }
-  }
-
-  @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.05); }
-    100% { transform: scale(1); }
-  }
-
-  /* === FOOTER ZINUS === */
-  .footer-zinus {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #006400;
-    color: white;
-    padding: 20px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 10px;
-  }
-
-  .footer-zinus p {
-    margin: 5px 0 15px;
-    font-size: 16px;
-    letter-spacing: 0.5px;
-  }
-
-  /* === RESPONSIVE === */
-  @media (max-width: 768px) {
-    .container {
-      width: 100%;
-      margin: 10px 0;
-      border-radius: 0;
-      box-shadow: none;
-    }
-
-    th, td {
-      font-size: 14px;
-      padding: 6px 4px;
-    }
-
-    .marquee { font-size: 16px; padding: 8px 0; }
-    h2 { font-size: 18px; }
-    #jam { font-size: 24px; }
-    #tanggal { font-size: 14px; }
-
-    .zinus-logo, .zinus-logo1 {
-      width: 45px;
-      height: 45px;
-    }
-
-    .logo-row {
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .footer-zinus p { font-size: 14px; }
-  }
 </style>
+
 </head>
 <body>
 
 <!-- === TEKS BERJALAN === -->
 <div class="marquee">
-  <marquee behavior="scroll" direction="left" scrollamount="6">
+  <marquee behavior="scroll" direction="left" scrollamount="10">
     HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
-
 <!-- === TABEL TOPPER === -->
 <div class="container">
-  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+  <div class="h2-header">
+    <select id="shiftSelector">
+      <option value="2" selected>SHIFT 2</option>
+      <option value="1">SHIFT 1</option>
+    </select>
+    <h2>TOPPER PACKING TARGET : 90 PC/JAM</h2>
+    <div style="width:80px;"></div>
+  </div>
+
   <table id="tableTopper">
     <thead>
       <tr>
         <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
-        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
+        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th>
+        <th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyTopper">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+      <tr><td colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TABEL FOAM === -->
+<!-- === FOAM PACKING === -->
 <div class="container">
-  <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
+  <h2 style="text-align:center;">FOAM PACKING TARGET : 75 PC/JAM</h2>
   <table id="tableFoam">
     <thead>
       <tr>
         <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
-        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
+        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th>
+        <th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyFoam">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+      <tr><td colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === BAGIAN TOTAL DAN JAM === -->
+<!-- === TOTAL & JAM === -->
 <div class="top-bar">
-
   <div class="total-wrapper">
-    <div class="total-box">
-      <table>
-        <thead><tr><th>SHIFT</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>
-              <select id="shiftSelector" 
-                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
-                <option value="2" selected>2</option>
-                <option value="1">1</option>
-              </select>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="total-box">
-      <table id="tableTotalTopper">
-        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
-        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
-
-    <div class="total-box">
-      <table id="tableTotalFoam">
-        <thead><tr><th>TOTAL FOAM</th></tr></thead>
-        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
+    <table class="total-table">
+      <thead>
+        <tr>
+          <th colspan="2">OUTPUT SHIFT 1</th>
+          <th colspan="2">OUTPUT SHIFT 2</th>
+        </tr>
+        <tr>
+          <th>TOPPER</th>
+          <th>FOAM</th>
+          <th>TOPPER</th>
+          <th>FOAM</th>
+        </tr>
+        </thead>
+      <tbody id="bodyTotalOutput">
+        <tr>
+          <td>0</td><td>0</td><td>0</td><td>0</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <div class="total-wrapper1">
-    <div class="datetime">
-      <div id="tanggal"></div>
-      <div id="jam"></div>
-    </div>
+    <div id="tanggal"></div>
+    <div id="jam"></div>
     <div class="logo-row">
       <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
       <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
@@ -321,49 +319,39 @@
   </div>
 </div>
 
-<!-- === FOOTER ZINUS === -->
 <footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
+  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
 </footer>
 
 <script>
-const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=1377587102&single=true&output=csv";
+const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
   const status = document.getElementById("status");
   try {
     status.textContent = "🔄 Memuat data...";
     const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
-    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
-
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
-    const totalTopperBody = document.getElementById("bodyTotalTopper");
-    const totalFoamBody = document.getElementById("bodyTotalFoam");
-
     topperBody.innerHTML = "";
     foamBody.innerHTML = "";
-    totalTopperBody.innerHTML = "";
-    totalFoamBody.innerHTML = "";
 
-    const topperRows = rows.slice(5, 8);
-    const foamRows = rows.slice(11, 16);
+    const topperRows = rows.slice(24, 27);
+    const foamRows = rows.slice(30, 35);
 
     topperRows.forEach(row => {
       const tr = document.createElement("tr");
       row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
+        td.style.fontSize = "35px";
         td.style.fontWeight = "bold";
-
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue)) {
-          if (cleanValue < 90 && cleanValue > 0) {
-            td.style.backgroundColor = "#ffcccc";
-            td.style.color = "#a80000";
-          }
+        const v = parseFloat(cell.replace(/[^0-9.]/g, ""));
+        if (index > 0 && !isNaN(v) && v < 90 && v > 0) {
+          td.style.backgroundColor = "#ffcccc";
+          td.style.color = "#a80000";
         }
         tr.appendChild(td);
       });
@@ -375,33 +363,32 @@ async function loadSheetData() {
       row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
+        td.style.fontSize = "35px";
         td.style.fontWeight = "bold";
-
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue)) {
-          if (cleanValue < 75 && cleanValue > 0) {
-            td.style.backgroundColor = "#ffcccc";
-            td.style.color = "#a80000";
-          }
+        const v = parseFloat(cell.replace(/[^0-9.]/g, ""));
+        if (index > 0 && !isNaN(v) && v < 75 && v > 0) {
+          td.style.backgroundColor = "#ffcccc";
+          td.style.color = "#a80000";
         }
         tr.appendChild(td);
       });
       foamBody.appendChild(tr);
     });
 
-    const totalRow = rows[18];
+    // === TOTAL OUTPUT SHIFT 1 & 2 ===
+    const totalRow = rows[19]; // nanti kamu ubah sesuai lokasi data
     if (totalRow) {
-      const topperValue = totalRow[0] || "0";
-      const foamValue = totalRow[1] || "0";
-      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
+      document.getElementById("bodyTotalOutput").innerHTML = `
+        <tr>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[0] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[1] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[2] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[3] || 0}</td>
+        </tr>`;
     }
 
-    const now = new Date();
-    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
-
-  } catch (err) {
-    console.error("Fetch error:", err);
+    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+  } catch {
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
@@ -418,12 +405,8 @@ loadSheetData();
 setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
-  const value = this.value;
-  if (value === "1") {
-    window.location.href = "index.html";
-  } else {
-    window.location.href = "shift2.html";
-  }
+  const v = this.value;
+  window.location.href = v === "1" ? "index.html" : "shift2.html";
 });
 </script>
 </body>
