--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ tr:hover {
 
 .total-table {
   width: 100%;
-  max-width: 650px;
+  max-width: 900px;
   border-collapse: collapse; /* biar border-nya menyatu */
   text-align: center;
   background: white;
@@ -293,8 +293,11 @@ tr:hover {
         <tr>
           <th colspan="2">OUTPUT SHIFT 1</th>
           <th colspan="2">OUTPUT SHIFT 2</th>
+          <th colspan="2">TOTAL OUTPUT</th>
         </tr>
         <tr>
+          <th>TOPPER</th>
+          <th>FOAM</th>
           <th>TOPPER</th>
           <th>FOAM</th>
           <th>TOPPER</th>
@@ -384,6 +387,8 @@ async function loadSheetData() {
           <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[1] || 0}</td>
           <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[2] || 0}</td>
           <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[3] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[4] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[5] || 0}</td>
         </tr>`;
     }
 
@@ -411,3 +416,4 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
