--- a/spring.html
+++ b/spring.html
@@ -13,7 +13,7 @@
   }
 
   .marquee {
-    background: #006400;
+    background: #083D36;
     color: white;
     padding: 10px 0;
     font-size: 40px;
@@ -59,7 +59,7 @@
   }
 
   th {
-    background: #006400;
+    background: #083D36;
     color: white;
   }
 
@@ -102,7 +102,7 @@
   }
 
   .shift-label {
-  background: #006400;
+  background: #083D36;
   color: white;
   font-size: 25px;
   font-weight: bold;
@@ -121,7 +121,7 @@
   }
 
   .total-box th {
-    background: #006400;
+    background: #083D36;
     color: white;
     font-size: 18px;
     padding: 10px;
@@ -195,7 +195,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #006400;
+    background: #083D36;
     color: white;
     padding: 20px 10px;
     border-top: 4px solid #004d00;
