--- a/spring.html
+++ b/spring.html
@@ -27,7 +27,7 @@
     text-align: center;
     color: #333;
     margin: 10px 0 5px;
-    font-size: 22px;
+    font-size: 30px;
   }
   h1 {
     text-align: left;
@@ -55,7 +55,7 @@
   th, td {
     padding: 10px 6px;
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
   }
 
   th {
@@ -220,7 +220,7 @@
 
 <!-- === SHIFT 1 === -->
 <div class="container">
-  <h2>SPRING PACKING TARGET : 60 Pcs/Jam</h2>
+  <h2>SPRING PACKING TARGET : 60 PC/JAM</h2>
   <div class="shift-label">SHIFT 1</div>
   <table id="tableShift1">
     <thead>
