--- a/spring.html
+++ b/spring.html
@@ -184,7 +184,7 @@
 <footer class="footer">© Zinus Global Indonesia | Factory 2 Karawang</footer>
 
 <script>
-const SHEET_URL = "LINK_CSV_KAMU_DI_SINI"; // GANTI INI
+const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQBYhHvt79gXdgMQdO86CWEyH18G2WhMKMWDrs1VRpvAOycjbdSb814zFG6Fiw3LRKXnWMOfmLlpiz5/pub?gid=235442278&single=true&output=csv"; // GANTI INI
 
 async function loadSheetData() {
   try {
