--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ tr:hover {
   <table id="tableTopper">
     <thead>
       <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+        <th style="width: 200px;">LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th>
         <th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
@@ -273,7 +273,7 @@ tr:hover {
   <table id="tableFoam">
     <thead>
       <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+        <th style="width: 200px;">LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th>
         <th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
@@ -416,4 +416,5 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
