--- a/spring.html
+++ b/spring.html
@@ -6,208 +6,231 @@
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
   body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background-color: #f4f6f8;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* hindari scroll horizontal */
+}
 
-  .marquee {
-    background: #083D36;
-    color: white;
-    padding: 10px 0;
-    font-size: 40px;
-    font-weight: bold;
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-
-  h2 {
-    text-align: center;
-    color: #333;
-    margin: 10px 0 5px;
-    font-size: 30px;
-  }
-  h1 {
-    text-align: left;
-    color: #333;
-    margin: 25px 0 10px;
-    font-size: 20px;
-  }
-
-  .container {
-    width: 95%;
-    margin: 15px auto;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    overflow-x: auto;
-    padding: 0;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-  }
-
-  th, td {
-    padding: 10px 6px;
-    text-align: center;
-    font-size: 30px;
-  }
-
-  th {
-    background: #083D36;
-    color: white;
-  }
-
-  tr:nth-child(even) { background-color: #f9f9f9; }
-  tr:hover { background-color: #e3f2fd; }
-
-  .footer {
-    text-align: right;
-    font-size: 25px;
-    padding: 5px;
-    background: #f1f1f1;
-    color: #666;
-    border-top: 1px solid #ddd;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-
-  .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 20px 3%;
-
-  }
-
-  .total-wrapper {
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    align-items: center;
-
-  }
-
-  .total-box {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    overflow: hidden;
-    width: 180px;
-  }
-
-  .shift-label {
+.marquee {
   background: #083D36;
   color: white;
-  font-size: 25px;
+  padding: 12px 0;
+  font-size: clamp(16px, 4vw, 50px); /* responsive font */
   font-weight: bold;
-  padding: 6px 10px;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+h2 {
+  color: #333;
+  margin: 3px 0;
+  font-size: clamp(35px, 3vw, 40px);
+}
+
+.h2-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3px 3%;
+  flex-wrap: wrap;
+}
+
+.h2-header select {
+  font-size: clamp(30px, 2.5vw, 35px);
+  font-weight: bold;
+  border: none;
+  background: none;
+  color: #083D36;
+  cursor: pointer;
+  outline: none;
+  min-width: 100px;
+}
+
+.container {
+  width: 95vw;
+  max-width: 100%;
+  margin: 30px auto;
+  background: white;
   border-radius: 10px;
-  width: fit-content;
-  margin-left: 10px;
-  margin-bottom: 2px;
-  margin-top: 5px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  overflow-x: auto; /* hanya jika perlu */
+  padding: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  word-wrap: break-word; /* pecah kata agar tidak overflow */
+  table-layout: fixed; /* penting untuk wrapping kolom */
+}
+
+th, td {
+  padding: 10px 6px;
+  text-align: center;
+  font-size: clamp(14px, 2vw, 32px);
+  overflow-wrap: break-word;
+}
+
+th {
+  background: #083D36;
+  color: white;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #e3f2fd;
+}
+
+.footer {
+  text-align: right;
+  font-size: clamp(12px, 1.5vw, 18px);
+  padding: 8px;
+  background: #f1f1f1;
+  color: #666;
+  border-top: 1px solid #ddd;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+/* === TOTAL + JAM === */
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 10px 3%;
+  flex-wrap: wrap;
+}
+
+.total-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.total-table {
+  width: 100%;
+  max-width: 900px;
+  border-collapse: collapse; /* biar border-nya menyatu */
+  text-align: center;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  border: 2px solid white; /* ✅ border luar warna putih */
+}
+
+.total-table th {
+  background: #083D36;
+  color: white;
+  font-size: clamp(18px, 3vw, 26px);
+  padding: 10px;
+  border: 2px solid white; /* ✅ border putih antar header */
+}
+
+.total-table td {
+  font-size: clamp(24px, 4vw, 36px);
+  font-weight: bold;
+  padding: 12px;
+  color: #333;
+  border: 2px solid white; /* ✅ border putih antar sel */
+  word-wrap: break-word;
 }
 
 
-  .total-box table {
-    width: 100%;
-    border-collapse: collapse;
-  }
+/* === JAM & LOGO === */
+.total-wrapper1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 3%;
+  text-align: center;
+  flex-wrap: wrap;
+}
 
-  .total-box th {
-    background: #083D36;
-    color: white;
-    font-size: 20px;
-    padding: 10px;
-  }
+#tanggal {
+  font-size: clamp(20px, 3vw, 30px);
+  font-weight: 600;
+  color: #333;
+}
 
-  .total-box td {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    padding: 10px;
-    color: #333;
-  }
+#jam {
+  font-size: clamp(40px, 6vw, 65px);
+  font-weight: bold;
+  color: #006400;
+  margin-top: 5px;
+}
 
-  .total-wrapper1 {
-    display: flex;
+.logo-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.zinus-logo, .zinus-logo1 {
+  width: clamp(60px, 5vw, 90px);
+  height: clamp(60px, 5vw, 90px);
+  border-radius: 10px;
+  background: white;
+  object-fit: contain;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
+}
+
+/* === FOOTER === */
+.footer-zinus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #083D36;
+  color: white;
+  padding: 20px 10px;
+  border-top: 4px solid #004d00;
+  margin-top: 5px;
+}
+
+.footer-zinus p {
+  margin: 3px 0 5px;
+  font-size: clamp(20px, 2vw, 35px);
+}
+
+@keyframes fadeZoomIn {
+  0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+  100% { opacity: 1; transform: scale(1) rotate(0deg); }
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+/* Responsive tweaks */
+@media (max-width: 768px) {
+  .h2-header {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-right: 3%;
-    text-align: center;
+    gap: 10px;
   }
-
-  .datetime {
-    margin-bottom: 10px;
-  }
-
-  #tanggal {
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
-  }
-
-  #jam {
-    font-size: 40px;
-    font-weight: bold;
-    color: #006400;
-    margin-top: 5px;
-    text-align: center;
-  }
-
-  .logo-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .total-wrapper {
+    flex-direction: column;
     gap: 15px;
   }
+}
 
-  .zinus-logo, .zinus-logo1 {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    background: white;
-    object-fit: contain;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    animation: fadeZoomIn 1.5s ease-out forwards, pulse 6s ease-in-out infinite;
-  }
-
-  @keyframes fadeZoomIn {
-    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
-    100% { opacity: 1; transform: scale(1) rotate(0deg); }
-  }
-
-  @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.05); }
-    100% { transform: scale(1); }
-  }
-
-  .footer-zinus {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #083D36;
-    color: white;
-    padding: 20px 10px;
-    border-top: 4px solid #004d00;
-    margin-top: 5px;
-  }
-
-  .footer-zinus p {
-    margin: 5px 0 15px;
-    font-size: 30px;
-    letter-spacing: 0.5px;
-  }
 </style>
+
 </head>
 <body>
 
@@ -218,72 +241,54 @@
   </marquee>
 </div>
 
-<!-- === SHIFT 1 === -->
+<!-- === TABEL TOPPER === -->
 <div class="container">
-  <h2>SPRING PACKING TARGET : 60 PC/JAM</h2>
-  <div class="shift-label">SHIFT 1</div>
-  <table id="tableShift1">
+  <div class="h2-header">
+    <select id="shiftSelector">
+      <option value="1" selected>SHIFT 1</option>
+      <option value="2">SHIFT 2</option>
+    </select>
+    <h2>SPRING PACKING TARGET : 65 PC/JAM</h2>
+    <div style="width:80px;"></div>
+  </div>
+
+  <table id="tableTopper">
     <thead>
       <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        <th style="width: 220px;">LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th>
+        <th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
-    <tbody id="bodyShift1">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
+    <tbody id="bodyTopper">
+      <tr><td colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === SHIFT 2 === -->
-<div class="container">
-  <div class="shift-label">SHIFT 2</div>
-  <table id="tableShift2">
-    <thead>
-      <tr>
-        <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
-        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
-      </tr>
-    </thead>
-    <tbody id="bodyShift2">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
-    </tbody>
-  </table>
-  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
-</div>
-
 <!-- === TOTAL & JAM === -->
 <div class="top-bar">
-
   <div class="total-wrapper">
-    <div class="total-box">
-      <table id="tableTotalShift1">
-        <thead><tr><th>OUTPUT SHIFT 1</th></tr></thead>
-        <tbody id="bodyTotalShift1"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
-
-    <div class="total-box">
-      <table id="tableTotalShift2">
-        <thead><tr><th>OUTPUT SHIFT 2</th></tr></thead>
-        <tbody id="bodyTotalShift2"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
-
-    <div class="total-box">
-      <table id="tableTotalOutput">
-        <thead><tr><th>TOTAL OUTPUT</th></tr></thead>
-        <tbody id="bodyTotalOutput"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
+    <table class="total-table">
+      <thead>
+        <tr>
+          <th>OUTPUT SHIFT 1</th>
+          <th>OUTPUT SHIFT 2</th>
+          <th">TOTAL OUTPUT</th>
+        </tr>
+        </thead>
+      <tbody id="bodyTotalOutput">
+        <tr>
+          <td>0</td><td>0</td><td>0</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <div class="total-wrapper1">
-    <div class="datetime">
-      <div id="tanggal"></div>
-      <div id="jam"></div>
-    </div>
+    <div id="tanggal"></div>
+    <div id="jam"></div>
     <div class="logo-row">
       <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
       <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
@@ -291,9 +296,8 @@
   </div>
 </div>
 
-<!-- === FOOTER === -->
 <footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
+  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
 </footer>
 
 <script>
@@ -304,85 +308,50 @@ async function loadSheetData() {
   try {
     status.textContent = "🔄 Memuat data...";
     const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
-    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
+    const topperBody = document.getElementById("bodyTopper");
+    topperBody.innerHTML = "";
 
-    const shift1Body = document.getElementById("bodyShift1");
-    const shift2Body = document.getElementById("bodyShift2");
-    const totalShift1Body = document.getElementById("bodyTotalShift1");
-    const totalShift2Body = document.getElementById("bodyTotalShift2");
-    const totalOutputBody = document.getElementById("bodyTotalOutput");
+    const topperRows = rows.slice(6, 10);
 
-    shift1Body.innerHTML = "";
-    shift2Body.innerHTML = "";
-    totalShift1Body.innerHTML = "";
-    totalShift2Body.innerHTML = "";
-    totalOutputBody.innerHTML = "";
-
-    const shift1Rows = rows.slice(6, 10);
-    const shift2Rows = rows.slice(14, 18);
-
-    // === SHIFT 1 ===
-    shift1Rows.forEach(row => {
+    topperRows.forEach(row => {
       const tr = document.createElement("tr");
       row.slice(0, 13).forEach((cell, index) => {
         const td = document.createElement("td");
         td.textContent = cell;
+        td.style.fontSize = "35px";
         td.style.fontWeight = "bold";
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue) && cleanValue < 60 && cleanValue > 0) {
+        const v = parseFloat(cell.replace(/[^0-9.]/g, ""));
+        if (index > 0 && !isNaN(v) && v < 90 && v > 0) {
           td.style.backgroundColor = "#ffcccc";
           td.style.color = "#a80000";
         }
         tr.appendChild(td);
       });
-      shift1Body.appendChild(tr);
+      topperBody.appendChild(tr);
     });
 
-    // === SHIFT 2 ===
-    shift2Rows.forEach(row => {
-      const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, index) => {
-        const td = document.createElement("td");
-        td.textContent = cell;
-        td.style.fontWeight = "bold";
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue) && cleanValue < 60 && cleanValue > 0) {
-          td.style.backgroundColor = "#ffcccc";
-          td.style.color = "#a80000";
-        }
-        tr.appendChild(td);
-      });
-      shift2Body.appendChild(tr);
-    });
-
-    // === TOTAL ===
-    const totalRow = rows[20];
+    // === TOTAL OUTPUT SHIFT 1 & 2 ===
+    const totalRow = rows[20]; // nanti kamu ubah sesuai lokasi data
     if (totalRow) {
-      const shift1Value = totalRow[0] || "0";
-      const shift2Value = totalRow[1] || "0";
-      const outputValue = totalRow[2] || "0"; // kolom C
-
-      totalShift1Body.innerHTML = `<tr><td>${shift1Value}</td></tr>`;
-      totalShift2Body.innerHTML = `<tr><td>${shift2Value}</td></tr>`;
-      totalOutputBody.innerHTML = `<tr><td>${outputValue}</td></tr>`;
+      document.getElementById("bodyTotalOutput").innerHTML = `
+        <tr>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[0] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[1] || 0}</td>
+          <td style="font-size:45px; border: 2px solid #083D36;">${totalRow[2] || 0}</td>
+        </tr>`;
     }
 
-    const now = new Date();
-    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
-
-  } catch (err) {
-    console.error("Fetch error:", err);
+    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+  } catch {
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
 
 function updateClock() {
   const now = new Date();
-  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", {
-    weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'
-  });
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
   document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
 }
 
@@ -390,6 +359,13 @@ setInterval(updateClock, 1000);
 updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
+
+document.getElementById("shiftSelector").addEventListener("change", function() {
+  const v = this.value;
+  window.location.href = v === "2" ? "shift2.html" : "index.html";
+});
 </script>
 </body>
 </html>
+
+
