--- a/spring.html
+++ b/spring.html
@@ -242,6 +242,7 @@ tr:hover {
 </div>
 
 <!-- === TABEL TOPPER === -->
+<div id="status" style="padding:10px; text-align:center; font-size:20px; color:#083D36;"></div>
 <div class="container">
   <div class="h2-header">
     <select id="shiftSelector">
@@ -275,7 +276,7 @@ tr:hover {
         <tr>
           <th>OUTPUT SHIFT 1</th>
           <th>OUTPUT SHIFT 2</th>
-          <th">TOTAL OUTPUT</th>
+          <th>TOTAL OUTPUT</th>
         </tr>
         </thead>
       <tbody id="bodyTotalOutput">
