--- a/spring.html
+++ b/spring.html
@@ -265,8 +265,7 @@ tr:hover {
       <tr><td colspan="13">Loading data...</td></tr>
     </tbody>
   </table>
-  <div class="footer">Auto-refresh setiap 30 detik</div>
-  <div id="status" style="padding:10px; text-align:center; font-size:5px; color:#083D36;"></div>
+  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
 </div>
 
 <!-- === TOTAL & JAM === -->
