--- a/spring.html
+++ b/spring.html
@@ -52,7 +52,7 @@ h2 {
 .container {
   width: 95vw;
   max-width: 100%;
-  margin: 70px auto;
+  margin: 80px auto;
   background: white;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
@@ -105,6 +105,7 @@ tr:hover {
   justify-content: space-between;
   align-items: flex-start;
   margin: 20px 3%;
+  margin-Bottom: 20px 3%;
   flex-wrap: wrap;
 }
 
@@ -198,7 +199,7 @@ tr:hover {
   color: white;
   padding: 20px 10px;
   border-top: 4px solid #004d00;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .footer-zinus p {
