--- a/shift2.html
+++ b/shift2.html
@@ -255,7 +255,7 @@ tr:hover {
   <table id="tableTopper">
     <thead>
       <tr>
-        <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+        <th style="width: 220px;">LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
         <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th>
         <th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
@@ -273,7 +273,7 @@ tr:hover {
   <table id="tableFoam">
     <thead>
       <tr>
-        <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+        <th style="width: 220px;">LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
         <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th>
         <th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
