--- a/spring.html
+++ b/spring.html
@@ -364,7 +364,7 @@ setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
   const v = this.value;
-  window.location.href = v === "2" ? "shift2.html" : "index.html";
+  window.location.href = v === "2" ? "spring2.html" : "spring.html";
 });
 </script>
 </body>
