--- a/spring2.html
+++ b/spring2.html
@@ -364,7 +364,7 @@ setInterval(loadSheetData, 30000);
 
 document.getElementById("shiftSelector").addEventListener("change", function() {
   const v = this.value;
-  window.location.href = v === "2" ? "spring2.html" : "spring.html";
+  window.location.href = v === "1" ? "spring.html" : "spring2.html";
 });
 </script>
 </body>
